hard-gists/e625e7ba482efdb670501cf401a2b6e9/run.log
=== Docker Run Log for e625e7ba482efdb670501cf401a2b6e9 ===
Started at: Mi 29. Okt 20:47:09 CET 2025

[2025-10-29 20:47:10] START: Running container for e625e7ba482efdb670501cf401a2b6e9
[2025-10-29 20:47:10] SUCCESS: Container da7a7885cf4a97c21dc53c0289452a371fa7b1b24f603cd46fbdb568f1d5a810 started for e625e7ba482efdb670501cf401a2b6e9
=== Container logs for e625e7ba482efdb670501cf401a2b6e9 ===
  File "/snippet.py", line 135
    print "ERROR"
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e625e7ba482efdb670501cf401a2b6e9 ===
[2025-10-29 20:47:12] INFO: Container da7a7885cf4a97c21dc53c0289452a371fa7b1b24f603cd46fbdb568f1d5a810 has stopped
